@@ -1,0 +1,3 @@
+// PR 92370 ICE with conlict marker
+
+<<<<<<<>>>>>>> // { dg-error "conflict marker" }
